--- a/style.css
+++ b/style.css
@@ -7,3 +7,8 @@ font-size: 100px;
 text-align: center;
 margin-top: 20%;
 }
+h2{
+   font-size: 40px;
+   text-align: center;
+   margin-top: -60px;
+   }
